@@ -3,7 +3,6 @@
 # See mosquitto.conf(5) for more information.
 #
 # This isn't a stable file format.
-# Ultimately it should probably mirror the format used by rsmb.
 #
 # Default values are shown, uncomment to change.
 
@@ -33,13 +32,15 @@
 # the user you wish it to run as.
 #user mosquitto
 
-# The maximum number of messages currently inflight per client. This includes
-# messages that are partway through the handshakes for QoS>0 messages and those
-# that are being retried. Defaults to 10. Set to 0 for no maximum.
+# The maximum number of QoS 1 and 2 messages currently inflight per client.
+# This includes messages that are partway through handshakes and those that are
+# being retried. Defaults to 10. Set to 0 for no maximum. Setting to 1 will
+# guarantee in-order delivery of QoS 1 and 2 messages.
 #max_inflight_messages 10
 
-# The maximum number of messages to hold in a queue for a client that is
-# disconnected. Defaults to 100. Set to 0 for no maximum.
+# The maximum number of QoS 1 and 2 messages to hold in a queue above those
+# that are currently in-flight.  Defaults to 100. Set to 0 for no maximum (not
+# recommended).
 #max_queued_messages 100
 
 # ======================================================================
